[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/Lampost/Lampost.png" type="Texture" id=1]
[ext_resource path="res://World/Lampost/Lampost.gd" type="Script" id=2]
[ext_resource path="res://Light/LightController.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Off"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "On"
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.7704, 20.3861 )

[node name="Lampost" type="Node2D" groups=[
"LightSourceInstance",
]]
pause_mode = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( -5, -22 )
hframes = 9
frame = 8

[node name="LightingAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Off = SubResource( 1 )
anims/On = SubResource( 2 )

[node name="LightController" parent="." instance=ExtResource( 3 )]
position = Vector2( -11.4602, -14.5006 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 256
collision_mask = 0

[node name="PickUpRange" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4.34045, -20.3704 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
